# Langcon

./: LICENSE.txt  README.md  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  ime.rs  lib.rs  main.rs  monitor.rs  process.rs  startup.rs  state.rs
src/components/: language-provider.tsx
src/components/ui/: scroll-area.tsx
src/i18n/en/: common.json  focus.json  process.json  settings.json  toast.json  tray.json
src/i18n/ja/: common.json  focus.json  process.json  settings.json  toast.json  tray.json
src/i18n/ko/: common.json  focus.json  process.json  settings.json  toast.json  tray.json
src/i18n/zh/: common.json  focus.json  process.json  settings.json  toast.json  tray.json
src/lib/: i18n.ts
